test/test_examples/syntactic_examples/syntax_error/error_fun_def_15.zig
// Syntax error: only parameter id entered

const ifj = @import("ifj24.zig"); 

pub fn foo( id ) void {

}  